--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.yaml.j2
@@ -38,25 +38,8 @@ variable "name_prefix" {
 
 
 {%- if IS_S3 | lower == 'true'%}
-variable "account_id" {
-    type        = string
-    description = "account id"
-}
 
-variable "create_s3_iam_group" {
-    type        = bool
-    description = "Whether to create s3 iam group or not"
-}
 
-variable "create_s3_iam_policy" {
-    type        = bool
-    description = "Whether to create s3 iam group or not"
-}
-
-variable "create_efs_policy" {
-    type        = bool
-    description = "Whether to create efs policy or not"
-}
 
 variable "s3_iam_users_list_manage" {
     description = "s3 user list"
@@ -98,6 +81,19 @@ variable "s3_encryption_algorithm" {
     type        = string
     description = "s3 encryption algorithm"
 }
+variable "create_s3_iam_policy" {
+    type        = bool
+    description = "Whether to create s3 iam group or not"
+}
+variable "create_efs_policy" {
+    type        = bool
+    description = "Whether to create efs policy or not"
+}
+
+variable "account_id" {
+    type        = string
+    description = "account id"
+}
 variable "create_bucket" {
     type        = bool
     description = "Enable creation of bucket"
@@ -105,6 +101,10 @@ variable "create_bucket" {
 variable "common_tags" {
     type        = map(string)
     description = "Common resource tags"
+}
+variable "create_s3_iam_group" {
+    type        = bool
+    description = "Whether to create s3 iam group or not"
 }
 variable "location" {
     type = object({
@@ -133,4 +133,44 @@ variable "db2_parameters_apply_type" {
   type        = string
   description = "db2 parameters apply type"
 }
+
+variable "access_level_audit_log_rw" {
+  type        = string
+  description = "read and write"
+  default     = "rw"
+}
+
+variable "iam_user_arn_prefix_audit_log" {
+  type        = string
+  description = "iam user arn"
+}
+variable "iam_user_name_prefix_audit_log" {
+  type        = string
+  description = "iam user name prefix"
+}
+{%- if (RDS_MANAGE | lower == 'true')%}
+variable "s3_iam_users_list_audit_log_manage" {
+  description = "s3 user list"
+  type = map(object({
+    iam_user_name = string
+  }))
+}
 {%- endif %}
+{%- if (RDS_IOT | lower == 'true')%}
+variable "s3_iam_users_list_audit_log_iot" {
+  description = "s3 user list"
+  type = map(object({
+    iam_user_name = string
+  }))
+}
+{%- endif %}
+{%- if (RDS_FACILITIES | lower == 'true')%}
+variable "s3_iam_users_list_audit_log_facilities" {
+  description = "s3 user list"
+  type = map(object({
+    iam_user_name = string
+  }))
+}
+{%- endif %}
+{%- endif %}
+
