--- a/tekton/src/pipelines/taskdefs/core/suite-install.yml.j2
+++ b/tekton/src/pipelines/taskdefs/core/suite-install.yml.j2
@@ -24,8 +24,12 @@
       value: $(params.mas_channel)
     - name: mas_catalog_source
       value: $(params.mas_catalog_source)
-    - name: mas_report_adoption_metrics
-      value: $(params.mas_report_adoption_metrics)
+    - name: mas_feature_usage
+      value: $(params.mas_feature_usage)
+    - name: mas_usability_metrics
+      value: $(params.mas_usability_metrics)
+    - name: mas_deployment_progression
+      value: $(params.mas_deployment_progression)
     - name: mas_icr_cp
       value: $(params.mas_icr_cp)
     - name: mas_icr_cpopen
