added pipeline support for rds s3 audit log bucket

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-iampolicy-db2.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-iampolicy-db2.yaml.j2
@@ -1,5 +1,5 @@
 module "account_policy" {
-  source               = "{{ S3_SOURCE_IAMPOLICY }}"
+  source               = "{{ RDS_IAM_SOURCE }}"
   name_prefix          = var.name_prefix
   create_s3_iam_group  = var.create_s3_iam_group
   create_s3_iam_policy = var.create_s3_iam_policy
