--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-iampolicy-db2.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-iampolicy-db2.yaml.j2
@@ -1,4 +1,4 @@
-module "account_policy" {
+module "account_policy_{{RDS_S3_APP_NAME}}" {
   source               = "{{ RDS_IAM_SOURCE }}"
   name_prefix          = var.name_prefix
   create_s3_iam_group  = var.create_s3_iam_group
