--- a/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
@@ -232,6 +232,9 @@ spec:
     - name: application_configuration
       type: string
       default: "true"
+    - name: additional_resources_instances
+      type: string
+      default: ""
 
     # maf parameters
     # ------------------------------------------------------------------------- 
@@ -465,6 +468,8 @@ spec:
           value: $(params.additional_vpn)
         - name: application_configuration
           value: $(params.application_configuration)
+        - name: additional_resources_instances
+          value: $(params.additional_resources_instances)
         - name: extensions
           value: $(params.extensions)
         - name: sls_service
