--- a/tekton/src/tasks/gitops/gitops-suite.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-suite.yml.j2
@@ -139,6 +139,9 @@ spec:
     - name: additional_vpn
       type: string
       default: ""
+    - name: additional_resources_instances
+      type: string
+      default: ""
     - name: extensions
       type: string
       default: "false"
@@ -255,6 +258,8 @@ spec:
         value: $(params.enhanced_dr)
       - name: ADDITIONAL_VPN
         value: $(params.additional_vpn)
+      - name: ADDITIONAL_RESOURCES_INSTANCES
+        value: $(params.additional_resources_instances)
       - name: IS_NON_SHARED_CLUSTER
         value: $(params.is_non_shared_cluster)
       - name: EXTENSIONS
