--- a/tekton/src/pipelines/mas-backup.yml.j2
+++ b/tekton/src/pipelines/mas-backup.yml.j2
@@ -268,7 +268,27 @@ spec:
         - suite-backup
 
   finally:
-    # Update synchronization configmap
+    # 1. Clean Backup Workspaces (Optional)
+    # -------------------------------------------------------------------------
+    - name: clean-backup-workspaces
+      timeout: "0"
+      when:
+        - input: "$(params.clean_backup)"
+          operator: in
+          values: ["true", "True"]
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+      taskRef:
+        kind: Task
+        name: mas-devops-clean-workspaces
+      workspaces:
+        - name: configs
+          workspace: shared-configs
+        - name: backups
+          workspace: shared-backups
+
+    # 2. Update synchronization configmap
     # -------------------------------------------------------------------------
     - name: sync-backup
       timeout: "0"
@@ -285,6 +305,8 @@ spec:
           # This variable is only available in the finally tasks and can have any one of the values (Succeeded, Failed, Completed, or None)
           value: $(tasks.status)
 
+    # 3. Pipeline Finish
+    # -------------------------------------------------------------------------
     - name: pipeline-finish
       timeout: "0"
       taskRef:
