updating task to support shared config

--- a/tekton/src/tasks/gitops/gitops-iac-provision-rdsdb2.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-provision-rdsdb2.yml.j2
@@ -204,3 +204,5 @@ spec:
   workspaces:
     - name: configs
       mountPath: /workspace/gitops-iac
+    - name: shared-gitops-configs
+      mountPath: /workspace/shared-gitops-configs
