updating task to support shared config

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-db2paramaters.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-db2paramaters.yaml.j2
@@ -2,6 +2,10 @@
 {{RDS_DB2_CONFIG_MANAGE_YAML}}
 {{RDS_DB2_CONFIG_IOT_YAML}}
 
+{{RDS_DB2_CONFIG_MANAGE}}
+{{RDS_DB2_CONFIG_IOT}}
+{{RDS_DB2_CONFIG_FACILITIES}}
+
 
 {%- if RDS_APP | upper == "MANAGE" -%}
 {%- set json_string = RDS_MANAGE_DB2_COMBINE_PROPERTIES | default('') -%}
